--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
+@import "primeng/resources/themes/lara-dark-teal/theme.css";
+@import "primeng/resources/primeng.css";
+@import "primeicons/primeicons.css";
+@import "primeflex/primeflex.css";
+@import "primeflex/themes/primeone-light.css";
+
+body {
+    font-family: var(--font-family);
+    background-color: var(--surface-a);
+    margin: 0 auto;
+    padding: 0;
+    background-image: url('./assets/countryside-field-sunny-day-countryside.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+}
+
+@media only screen and (max-width: 767px) {
+    body {
+        background-image: url('./assets/countryside-field-sunny-day-countryside small.jpg');
+    }
+  }
