--- a/src/app/dashboard/components/notifications/notifications.component.html
+++ b/src/app/dashboard/components/notifications/notifications.component.html
@@ -1,7 +1,7 @@
 <p-dataView #dv [value]="notifications">
     <ng-template let-notification pTemplate="listItem">
         <div class="col-12">
-            <div class="flex flex-column xl:flex-row xl:align-items-start p-4 gap-4">
+            <div class="flex flex-column xl:flex-row xl:align-items-start p-4 gap-4" routerLink={{notification.routerLink}}>
                 <div
                     class="flex flex-column sm:flex-row justify-content-between align-items-center xl:align-items-start flex-1 gap-4">
                     <div class="flex flex-column align-items-center sm:align-items-start gap-3">
