--- a/src/app/portal/components/menu/menu.component.html
+++ b/src/app/portal/components/menu/menu.component.html
@@ -1,19 +1,19 @@
 <div class="card">
     <p-menubar [model]="items">
         <ng-template pTemplate="start">
-            <a routerLink="home" [style]="{'text-decoration':'none'}"> CropdatAI </a>
+            <a routerLink="home" class="noDecorator"> CropdatAI </a>
         </ng-template>
         <ng-template pTemplate="end">
             <div class="p-2">
                 <i class="pi pi-bell text-2xl" (click)="showDialog()" pBadge value="1" severity="danger"></i>
             </div>
 
-            <p-dialog [(visible)]="visible" position="top" [style]="{width: '90vw'}">
+            <p-dialog [(visible)]="visible" position="top" [style]="{width: '90vw'}" (click)="closeDialog('1001')">
                 <p-header><p-avatar icon="pi pi-exclamation-triangle" styleClass="mr-2" shape="circle" [style]="{ 'background-color': '#f43333', color: '#ffffff' }"></p-avatar>
-                    Humedad de cultivo #03 Baja
+                    Humedad de cultivo de Rosas 2 Baja
                 </p-header>
                 <p>
-                    El cultivo de Rosas #03 debe ser regado en las próximas horas, su humedad ha bajado
+                    El cultivo de Rosas 2 debe ser regado en las próximas horas, su humedad ha bajado
                     considerablemente
                 </p>
             </p-dialog>
