--- a/src/styles.css
+++ b/src/styles.css
@@ -20,4 +20,9 @@ body {
     body {
         background-image: url('./assets/countryside-field-sunny-day-countryside small.jpg');
     }
-  }
+}
+
+.noDecorator {
+    text-decoration: none !important;
+    color: var(--primary-color-text);
+}
