--- a/src/app/dashboard/components/notifications/notifications.component.html
+++ b/src/app/dashboard/components/notifications/notifications.component.html
@@ -1,23 +1,20 @@
-<p-dataView #dv [value]="notifications">
-    <ng-template let-notification pTemplate="listItem">
-        <div class="col-12">
-            <div class="flex flex-column xl:flex-row xl:align-items-start p-4 gap-4" routerLink={{notification.routerLink}}>
-                <div
-                    class="flex flex-column sm:flex-row justify-content-between align-items-center xl:align-items-start flex-1 gap-4">
-                    <div class="flex flex-column align-items-center sm:align-items-start gap-3">
-                        <div class="text-2xl font-bold ">{{ notification.name }}</div>
-                        <div class="flex align-items-center gap-3">
-                            <span class="flex align-items-center gap-2">
-                                <span>{{ notification.description }}</span>
-                            </span>
-                        </div>
-                    </div>
-                    <div class="flex sm:flex-column align-items-center sm:align-items-end gap-3 sm:gap-2">
-                        <span class=" font-semibold">{{ notification.date }}</span>
-                        <p-avatar icon="pi {{notification.icon}}" styleClass="mr-2" shape="circle" [style]="{ 'background-color': notification.color, color: '#ffffff' }"></p-avatar>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </ng-template>
-</p-dataView>
+<div class="">
+    <p-accordion [activeIndex]="0">
+        <ng-template ngFor let-notification [ngForOf]="notifications">
+            <p-accordionTab>
+                <ng-template pTemplate="header" class="flex">
+                    <p-avatar icon="pi {{notification.icon}}" styleClass="mr-2" shape="circle"
+                        [style]="{ 'background-color': notification.color, color: '#ffffff' }"></p-avatar>
+                    <span class="vertical-align-middle">{{notification.name}}</span>
+                    <div class="text-xs vertical-align-top text-right hidden absolute right-0 pr-3 md:block ">{{ notification.date }}</div>
+                </ng-template>
+                <div class="text-xs vertical-align-top text-right md:hidden">{{ notification.date }}</div>
+                <p>
+                    {{ notification.description }}
+                </p>
+                <p-button label="Visitar" styleClass="p-button-secondary"
+                    routerLink={{notification.routerLink}} [style]="{ 'margin-left': '.5em' }"></p-button>
+            </p-accordionTab>
+        </ng-template>
+    </p-accordion>
+</div>
