dashboard starting dev

--- a/src/app/dashboard/components/map/map.component.html
+++ b/src/app/dashboard/components/map/map.component.html
@@ -5,7 +5,7 @@
 
     
     <ng-template pTemplate="footer">
-        <p-button label="Cancelar" icon="pi pi-times" styleClass="p-button-secondary" routerLink="/maps"
+        <p-button label="Cancelar" icon="pi pi-times" styleClass="p-button-secondary" (click)="back()"
             [style]="{ 'margin-left': '.5em' }"></p-button>
     </ng-template>
-</p-card>
+</p-card> 
