--- a/src/app/dashboard/components/maps/maplist.component.html
+++ b/src/app/dashboard/components/maps/maplist.component.html
@@ -6,7 +6,7 @@
                     <div class="flex flex-row justify-content-between ">
                         <div class="flex flex-row align-items-center gap-3">
                             <p-image src="assets/minimap.jpg" alt='{{ map.name }}' width="50" class="flex"></p-image>
-                            <div class=" flex text-2xl font-bold noDecorator">{{ map.name }}</div>
+                            <div class=" flex text-2xl font-bold noDecorator titles">{{ map.name }}</div>
                         </div>
                         <div class="flex sm:flex-column align-items-center sm:align-items-end ">
                             <p-badge value={{map.messages}}
