--- a/src/app/portal/components/menu/menu.component.html
+++ b/src/app/portal/components/menu/menu.component.html
@@ -1,7 +1,7 @@
 <div class="card">
     <p-menubar [model]="items">
         <ng-template pTemplate="start">
-            <a routerLink="home" class="noDecorator"> CropdatAI </a>
+            <a routerLink="home" class="noDecorator appName"> CropdatAI </a>
         </ng-template>
         <ng-template pTemplate="end">
             <div class="p-2">
