--- a/src/WRCTheme.css
+++ b/src/WRCTheme.css
@@ -1,12 +1,15 @@
 :root {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   --font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  --surface-dis: rgba(58, 68, 51, 1);
-  --surface-a: rgba(118, 128, 101, 1);
+  --surface-dis: rgba(41, 43, 58, 1);
+
+  /*--surface-a: rgba(118, 128, 101, 1);*/
+  --surface-a: rgb(91, 93, 108);
   --surface-b: #f4f4f4;
   --surface-c: #e0eae0;
-  --surface-d: #c8c8c8;
-  --surface-e: #ffffff;
+  --surface-d: rgba(151, 153, 168, 1);
+  /*--surface-e: rgba(118, 128, 101, 0.95);*/
+  --surface-e: rgba(51, 53, 68, 0.95);
   --surface-f: #ffffff;
   --text-color: #ffffff;
   --text-color-secondary: #848484;
@@ -40,7 +43,7 @@
   --surface-section:#ffffff;
   --surface-card:#ffffff;
   --surface-overlay:#ffffff;
-  --surface-border:#c8c8c8;
+  --surface-border:#ffffff;
   --surface-hover:#eaeaea;
   --maskbg: rgba(0, 0, 0, 0.4);
   --highlight-bg: #007ad9;
@@ -5101,11 +5104,16 @@
 
   .p-menubar {
     padding: 0.5rem;
-    background: rgba(118, 128, 101, 0.95);
+    background: var(--surface-e);
     color: #fff;
     border: 1px solid #c8c8c8;
     border-radius: 3px;
   }
+  .p-menuitem-link{
+    color: var(--surface-dis);
+  }
+
+
   .p-menubar .p-menubar-root-list {
     outline: 0 none;
   }
@@ -5118,6 +5126,8 @@
     padding: 0.857rem;
     user-select: none;
   }
+
+
   .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-text {
     color: var(--text-color);
   }
@@ -5125,6 +5135,9 @@
     color: var(--text-color);
     margin-right: 0.5rem;
   }
+
+
+
   .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-content .p-menuitem-link .p-submenu-icon {
     color: var(--text-color);
     margin-left: 0.5rem;
@@ -5215,7 +5228,7 @@
       display: flex;
       width: 2rem;
       height: 2rem;
-      color: var(--surface-dis);
+      color: var(--text-color);
       border-radius: 50%;
       transition: background-color 0.2s, color 0.2s, box-shadow 0.2s;
     }
@@ -5232,7 +5245,7 @@
       position: absolute;
       display: none;
       padding: 0;
-      background: #ffffff;
+      background: var(--surface-d);
       border: 1px solid #c8c8c8;
       box-shadow: 0 0px 6px 0 rgba(0, 0, 0, 0.16);
       width: 100%;
