--- a/src/app/dashboard/components/dashboard/dashboard.component.html
+++ b/src/app/dashboard/components/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-wrap card-container ">
     <ng-template ngFor let-graph [ngForOf]="items">
-        <div class="flex flex-wrap graphIcon  w-9rem md:w-15rem h-9rem md:h-15rem m-1 border-round-lg ">
+        <div class="flex flex-wrap graphIcon  w-9rem md:w-15rem h-9rem md:h-15rem m-1 border-round-lg " routerLink="{{'/maps/'+graph.mapId}}">
             <div class="flex max-h-2rem min-w-full text-sm font-normal titles">
                 {{graph.name}}
             </div>
