--- a/src/app/dashboard/components/notifications/notifications.component.html
+++ b/src/app/dashboard/components/notifications/notifications.component.html
@@ -12,7 +12,7 @@
                 <p>
                     {{ notification.description }}
                 </p>
-                <p-button label="Visitar" styleClass="p-button-secondary"
+                <p-button label="Visitar"
                     routerLink={{notification.routerLink}} [style]="{ 'margin-left': '.5em' }"></p-button>
             </p-accordionTab>
         </ng-template>
