--- a/src/app/portal/components/menu/menu.component.html
+++ b/src/app/portal/components/menu/menu.component.html
@@ -8,11 +8,11 @@
                 <i class="pi pi-bell text-2xl" (click)="showDialog()" pBadge value="1" severity="danger"></i>
             </div>
 
-            <p-dialog [(visible)]="visible" position="top" [style]="{width: '90vw'}" (click)="closeDialog('11')">
+            <p-dialog [(visible)]="visible" position="top" [style]="{width: '90vw'}">
                 <p-header><p-avatar icon="pi pi-exclamation-triangle" styleClass="mr-2" shape="circle" [style]="{ 'background-color': '#f43333', color: '#ffffff' }"></p-avatar>
                     Humedad de cultivo de Rosas 2 Baja
                 </p-header>
-                <p>
+                <p (click)="closeDialog('12')">
                     El cultivo de Rosas 2 debe ser regado en las próximas horas, su humedad ha bajado
                     considerablemente
                 </p>
