--- a/src/app/portal/components/satisfaction/satisfaction.component.html
+++ b/src/app/portal/components/satisfaction/satisfaction.component.html
@@ -1,19 +1,19 @@
 <div class="card pr-8">
-    <p-image src="assets/faceHappy.png" (click)="confirm($event)" alt='happy' class=" " width="40px"></p-image>
-    <p-image src="assets/faceNormal.png" (click)="confirm($event)" alt='normal' class=" " width="40px"></p-image>
-    <p-image src="assets/faceSad.png" (click)="confirm($event)" alt='sad' class=" " width="40px"></p-image>
+  <p-image src="assets/faceHappy.png" (click)="confirm($event)" alt='happy' class=" " width="40px"></p-image>
+  <p-image src="assets/faceNormal.png" (click)="confirm($event)" alt='normal' class=" " width="40px"></p-image>
+  <p-image src="assets/faceSad.png" (click)="confirm($event)" alt='sad' class=" " width="40px"></p-image>
 </div>
 <p-toast></p-toast>
 <p-confirmPopup></p-confirmPopup>
+<p-dialog header="Header" [(visible)]="visible" position="topright">
+  <ng-template pTemplate="header">
+    <span class="text-xl font-bold">Dejanos tu comentario</span>
+  </ng-template>
+  <textarea title="commentBox" id="commentBox" rows="5" cols="40" pInputTextarea autofocus [(ngModel)]="textValue"
+    required></textarea>
 
-<p-dialog header="Header" [(visible)]="visible" [style]="{ width: '50vw' }">
-    <ng-template pTemplate="header">
-        <span class="text-xl font-bold">Dejanos tu comentario</span>
-    </ng-template>
-    <textarea  id="commentBox" rows="5" cols="40" pInputTextarea  [(ngModel)]="textValue" required></textarea>
-
-    <ng-template pTemplate="footer">
-        <p-button icon="pi pi-check" (click)="saveComment()" label="Guardar Comentario" styleClass="p-button-text"></p-button>
-    </ng-template>
+  <ng-template pTemplate="footer">
+    <p-button icon="pi pi-check" (click)="saveComment()" label="Guardar Comentario"
+      styleClass="p-button-text"></p-button>
+  </ng-template>
 </p-dialog>
-
